added the message board HTML

--- a/historyBoard.html
+++ b/historyBoard.html
@@ -38,6 +38,7 @@
             <h1>RE-IMAGINED</h1>
 
         </div>
+        
         <nav>
             <a href = "index.html" >
                 <img >
@@ -68,6 +69,27 @@
         <img >
         <h1 class = "messageBoard" class = "text">History</h1>
     </main>
-    
+    <div class="userBoard">
+        <form>
+            <div class="inputContainer">
+                <div class="singleInput">
+                    <label for="username">Username:</label>
+                    <input id="username" type="text">
+                </div>
+                <div>
+                    <label for="time">Time Of Entry: </label>
+                    <input id = "time" type="text">
+                </div>
+                <div class="singleInput">
+                    <label for="message">Message:</label>
+                    <input id="message" type="text">
+                </div>
+            </div>
+            <button id="submitButton">Submit Post</button>
+        </form>
+    </div>
+    <hr>
+
+    <div class="allMessages"></div>
 </body>
 </html>
