--- a/engineeringBoard.html
+++ b/engineeringBoard.html
@@ -7,6 +7,30 @@
     <title>Engineering Board</title>
     <script src="main.js" defer></script>
     <link rel = "stylesheet" href = "style.css">
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyCD37OrzHOcHS9w14zNpipFeJq1nGCeUL4",
+    authDomain: "engineering-board.firebaseapp.com",
+    databaseURL: "https://engineering-board-default-rtdb.firebaseio.com",
+    projectId: "engineering-board",
+    storageBucket: "engineering-board.appspot.com",
+    messagingSenderId: "64160013934",
+    appId: "1:64160013934:web:a962fb5ba9d055855c507f",
+    measurementId: "G-9EWWJ211NW"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </head>
 <body>
     <div id='header'>
@@ -45,5 +69,28 @@
         <img >
         <h1 class = "messageBoard" class = "text">Engineering</h1>
     </main>
+    <div class="userBoard">
+        <form>
+            <div class="inputContainer">
+                <div class="singleInput">
+                    <label for="username">Username:</label>
+                    <input id="username" type="text">
+                </div>
+                <div>
+                    <label for="time">Time Of Entry: </label>
+                    <input id = "time" type="text">
+                </div>
+                <div class="singleInput">
+                    <label for="message">Message:</label>
+                    <input id="message" type="text">
+                </div>
+            </div>
+            <button id="submitButton">Submit Post</button>
+        </form>
+    </div>
+
+    <hr>
+    <div class="allMessages"></div>
+    
 </body>
 </html>
