--- a/scienceBoard.html
+++ b/scienceBoard.html
@@ -68,6 +68,26 @@
         <h1 class = "messageBoard" class = "text">Science</h1>
     </main>
 
-    
+    <div class="userBoard">
+        <form>
+            <div class="inputContainer">
+                <div class="singleInput">
+                    <label for="username">Username:</label>
+                    <input id="username" type="text">
+                </div>
+                <div>
+                    <label for="time">Time Of Entry: </label>
+                    <input id = "time" type="text">
+                </div>
+                <div class="singleInput">
+                    <label for="message">Message:</label>
+                    <input id="message" type="text">
+                </div>
+            </div>
+            <button id="submitButton">Submit Post</button>
+        </form>
+    </div>
+    <hr>
+    <div class="allMessages"></div>
 </body>
 </html>
