--- a/readingBoard.html
+++ b/readingBoard.html
@@ -11,6 +11,9 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
+
 
 <script>
   // Your web app's Firebase configuration
@@ -29,7 +32,7 @@
   firebase.analytics();
 </script>
 <link rel = "stylesheet" href = "style.css">
-
+<script src="main.js" defer></script>
 </head>
 <body>
     <div id='header'>
@@ -88,7 +91,6 @@
         </form>
     </div>
     <hr>
-
     <div class="allMessages"></div>
 </body>
 </html>
