--- a/readingBoard.html
+++ b/readingBoard.html
@@ -75,16 +75,16 @@
         <form>
             <div class="inputContainer">
                 <div class="singleInput">
-                    <label for="username">Username:</label>
+                    <label for="username" class = "entry">Username:</label>
                     <input id="username" type="text">
                 </div>
                 <div>
-                    <label for="time">Time Of Entry: </label>
+                    <label for="time" class = "entry">Time Of Entry: </label>
                     <input id = "time" type="text">
                 </div>
                 <div class="singleInput">
-                    <label for="message">Message:</label>
-                    <input id="message" type="text">
+                    <label for="message" class = "entry">Message:</label>
+                    <input id="message" type="text" class = "textSpace">
                 </div>
             </div>
             <button id="submitButton">Submit Post</button>
