--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    
 
     <main>
-        <img >
+        <img  class= "imagess" src = "logos/social.png" >
         <h1 class = "homepage" class = "text">Home</h1>
         <p class = "text" class = "stuff">Welcome to our message board website! Our goal for this application is to re-ignite the passion for learning and being engaged in school for all those that are looking for an outlet to talk about, or have interetsing discussions abotu what you learned. We realize that many people, old and young alike, lose interets in school very quickly when the content, lesson plan, or teacher engagement is lacking significantly. Us, the creators of the website, have also experienced issues like this, and would've dreamed of havign an educational outlet were we get to engage with others in a similar position to us, and just talk! That's what EDU-Space is all about. A kind of social media, except geared towards more academic conversation.</p>
     </main>
